syntax = "proto3";
package cheetah.matches.relay.admin;
option csharp_namespace = "Cheetah.Matches.Relay.Editor.NetworkCommandsViewer.GRPC";

service CommandTracer {

  /**
    Получить список комнат
   */
  rpc GetRooms(GetRoomsRequest) returns(GetRoomsResponse);

  /**
    Создать сессию
   */
  rpc CreateSession(CreateSessionRequest) returns(CreateSessionResponse);

  /**
    Установить фильтр для фильтрации команд
   */
  rpc SetFilter(SetFilterRequest) returns(SetFilterResponse);

  /**
    Получить отфильтрованные команды
   */
  rpc GetCommands(GetCommandsRequest) returns(GetCommandsResponse);

  rpc CloseSession(CloseSessionRequest) returns(CloseSessionResponse);

}

message GetRoomsRequest {

}

message GetRoomsResponse {
  repeated uint64 rooms = 1;
}

message CreateSessionRequest {
  uint64 room = 1;
}
message CreateSessionResponse {
  uint32 id = 1;
}

message SetFilterRequest {
  uint64 room = 1;
  uint32 session = 2;
  string filter = 3;
}

message SetFilterResponse {

}

message GetCommandsRequest {
  uint64 room = 1;
  uint32 session = 2;
}

message GetCommandsResponse {
  repeated Command commands = 1;
}


message Command {
  double time = 1;
  string direction = 2;
  string command = 3;
  string object_id = 4;
  uint32 user_id = 5;

  // u32.max - значение не определено
  uint32 template = 6;

  // u32.max - значение не определено
  uint32 field_id = 7;
  string value = 8;
}


message CloseSessionRequest {
  uint64 room = 1;
  uint32 session = 2;
}

message CloseSessionResponse {

}