syntax = "proto3";
package cheetah.matches.relay.types;
option csharp_namespace = "Cheetah.Matches.Relay.Types";


message RoomTemplate {
  repeated GameObjectTemplate objects = 2;
  repeated TemplatePermission template_permissions = 3;
}

message TemplatePermission {
  uint32 template = 1;
  repeated PermissionGroup groups = 2;
  repeated PermissionField fields = 3;
}


message PermissionField {
  uint32 field_id = 1;
  FieldType field_type = 2;
  repeated PermissionGroup groups = 3;
}
enum FieldType {
  Long = 0;
  Float = 1;
  Structure = 2;
  Event = 3;
}

message PermissionGroup {
  uint64 access_group = 1;
  Permission permission = 2;
}

enum Permission {
  Deny = 0;
  Ro = 1;
  Rw = 2;
}

message UserTemplate {
  uint32 id = 1;
  uint64 access_group = 3;
  repeated GameObjectTemplate objects = 4;
}

message GameObjectTemplate {
  uint32 id = 1;
  uint32 template = 2;
  uint64 access_group = 3;
  FieldsTemplate fields = 4;
}

message FieldsTemplate {
  map<uint32, int64> longs = 1;
  map<uint32, double> floats = 2;
  map<uint32, bytes> structures = 3;
}

